demos/remote-k8s/improve-security/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: globoticket
  labels: 
    name: globoticket
