demos/remote-k8s/improve-security/sqlserver.yaml
kind: Service
apiVersion: v1
metadata:
  name: sqlserver
  namespace: globoticket
  labels:
    app: sqlserver
spec:
  selector:
    app: sqlserver
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
    appProtocol: tcp
    name: tds
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
  namespace: globoticket
  labels:
    app: sqlserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: sqlserver
    spec:
      containers:
      - name: sqlserver
        image: mcr.microsoft.com/mssql/server:latest
        ports:
        - containerPort: 1433
        imagePullPolicy: Always
